trying a new approach

--- a/src/index.html
+++ b/src/index.html
@@ -16,7 +16,7 @@
         <h1 class="left-Text">Three.js allow you to make amazing 3D websites<h1/>
     </section>
     <section class="section">
-        <h2>See you !</h2>
+        <h2 class="left-Text">like unreal engine for JavaScript !</h2>
     </section>
 
     <script type="module" src="./script.js"></script>
