font added and footer

--- a/src/index.html
+++ b/src/index.html
@@ -5,6 +5,18 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My 3D website</title>
     <link rel="stylesheet" href="./style.css">
+                    <!-- Googlefonts -->
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Rampart+One&family=Rubik+Iso&display=swap" rel="stylesheet">
+
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Dancing+Script&family=Lobster&family=Monoton&display=swap" rel="stylesheet">
+
+<!--==================== UNICONS ====================-->
+<link rel="stylesheet" href="https://unicons.iconscout.com/release/v4.0.0/css/line.css">
+
 </head>
 <body>
     <canvas class="webgl"></canvas>
@@ -13,15 +25,33 @@
         <h1>.</h1>
     </section>
     <section class="section">
-        <h1 class="left-Text">Three.js allow you make amazing 3D websites<h1/>
+        <h1 class="left-Text">THREE.JS ALLOW YOU MAKE AMAZING 3D WEBSITES<h1/>
     </section>
     <section class="section">
-        <h2 class="left-Text">like unreal engine for JS!</h2>
+        <h2 class="left-Text">LIKE UNREAL ENGINE FOR JS!</h2>
     </section>
     <section class="section">
-        <h2 class="left-Text">let's work togheter !</h2>
-    </section>
+        <h2 class="left-Text">BYE!</h2>
+        <div class="contact">
+            <div class="footer socials">
+                <a href="https://www.linkedin.com/in/diego-alejandro-cascavita-poveda-890524124/" 
+                class="footer__social" target="_blank">
+                    <i class="uil uil-linkedin"></i>
+                </a>
 
+                <a href="https://personal-portfolio-page-231.netlify.app" class="footer__social" target="_blank"><!--LINK PORTAFOLIO THREE.JS-->
+                    <i class="uil uil-bag"></i>
+                </a>
+
+                <a href="https://github.com/DiegoCascavita" class="footer__social" target="_blank">
+                    <i class="uil uil-github"></i>
+                </a>
+            </div>
+            <h1 class="icons">
+                Diego Cascavita
+            </h1>
+        </div>
+    </section>
     <script type="module" src="./script.js"></script>
 </body>
 </html>
