audio and pop up done

--- a/src/index.html
+++ b/src/index.html
@@ -19,13 +19,16 @@
 
 </head>
 <body>
-    <audio autoplay loop src="./assets/Space.mp3"></audio>
-    <canvas class="webgl"></canvas>
 
+<audio autoplay loop>
+<source src="./assets/Space.mp3" type="audio/mpeg">
+</audio>
+
+<canvas class="webgl"></canvas>
     <section class="section">
         <div id="modalbox">
             <img src="./assets/giroscope.gif" alt="PopUp" class="img">
-            <p class="popup-text">If you are on cell phone turn on the giroscope</p>
+            <p class="popup-text">If you are on cell phone turn on the gyroscope</p>
             <button type="button" class="accept-btn" onclick="closeModal()">Accept</button>
           </div>
     </section>
@@ -36,7 +39,7 @@
         <h2 class="left-Text">IF U WANT TO SEE MY WORK!</h2>
     </section>
     <section class="section">
-        <h2 class="left-Text">CLICK THE BRIEFCASE!</h2>
+        <h2 class="right-Text">CLICK THE BRIEFCASE!</h2>
         <div class="contact">
             <div class="footer socials">
                 <a href="https://www.linkedin.com/in/diego-alejandro-cascavita-poveda-890524124/" 
