--- a/src/index.html
+++ b/src/index.html
@@ -43,7 +43,7 @@
                     <i class="uil uil-linkedin"></i>
                 </a>
 
-                <a href="https://personal-portfolio-page-231.netlify.app" class="footer__social" target="_blank"><!--LINK PORTAFOLIO THREE.JS-->
+                <a href="https://diego-cascavita.netlify.app" class="footer__social" target="_blank"><!--LINK PORTAFOLIO THREE.JS-->
                     <i class="uil uil-bag"></i>
                 </a>
 
