--- a/src/index.html
+++ b/src/index.html
@@ -29,7 +29,7 @@
           </div>
     </section>
     <section class="section">
-        <h1 class="left-Text">I'M A CREATIVE FRONTEND DEV<h1/>
+        <h1 class="left-Text">I'M A FULLSTACK DEV<h1/>
     </section>
     <section class="section">
         <h2 class="left-Text">IF U WANT TO SEE MY WORK!</h2>
